refactor+test